--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,54 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mr-30 {
+  margin-right: 30px;
+}
+
+.w-20 {
+  width: 20%;
+}
+
+.w-30 {
+  width: 30%;
+}
+
+.w-70 {
+  width: 70%;
+}
+
+.w-80 {
+  width: 80%;
+}
+
+.comments {
+  width: 75%;
+}
+
+img {
+  max-width: 100%;
+}
+
+@media screen and (max-width: 1024px) {
+  .comments, .user-details, .download-container, .description {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-container, .left-container, .attachment-container {
+    width: 100%;
+  }
+  .main-container {
+    margin-top: 20px;
+  }
+}
